Improve scoreboard
